🐛 fix: Fix a z-index bug

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@
   position: fixed;
   height: 68px;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
   background-color: #1f1f1f;
 
   & .navbar__logoborder {
